--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{{title}}</title>
-</head>
-<body>
-    <h1>{{title}}</h1>
-    {% block content %}{% endblock content %}
-</body>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <style>
+       h1{
+           text-align: center;
+       }
+    </style>
+    <h1 class="jumbotron">{{title}}</h1>
+
+    <span class="container map-container">
+      <div class="row">
+          <div id='map-div' class="col-md-10" style="height: 550px;">{% block content %}{% endblock content %}</div>
+          <div class="col-md-2 panel panel-default">
+            <div class="panel-body">
+              <div class="panel-heading">Options</div>
+              <form>
+                {% for map in maps %}
+                  <div class="checkbox">
+                    <label><input type="radio" name="mapname" value="{{map.name}}" class="mapbuttons"> {{map.name}}</label>
+                  </div>
+                {% endfor %}
+                  <button type="button" id="changemap "class="btn btn-primary">Change</button>
+              </form>
+            </div>
+          </div>
+      </div>
+    </span>
+
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('button').click(function() {
+                var filename = $('.mapbuttons:checked')[0].value + '.html';
+                $('#map-div').empty();
+                location.href = filename;
+            });
+        });
+    </script>
+  </body>
 </html>
