--- a/templates/showmap.html
+++ b/templates/showmap.html
@@ -1,9 +1,9 @@
 {% extends "index.html" %}
 {% block content %}
-{% if current == 'past' %}
+{% if current == 'past.html' %}
     {% include 'past.html' %}
 {% endif %}
-{% if current == 'battery' %}
+{% if current == 'battery.html' %}
     {% include 'battery.html' %}
 {% endif %}
 
