--- a/webapp/templates/showmap.html
+++ b/webapp/templates/showmap.html
@@ -3,6 +3,9 @@
 {% if current == 'past.html' %}
     {% include 'past.html' %}
 {% endif %}
+{% if current == 'tomorrow.html' %}
+    {% include 'tomorrow.html' %}
+{% endif %}
 {% if current == 'battery.html' %}
     {% include 'battery.html' %}
 {% endif %}
